# kUPS

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  chore.yml  docs.yml  feature.yml  research.yml
.github/actions/setup/: action.yml
.github/config/: models.json
.github/prompts/: issue-labeling.md  milestone-sync.md  pr-description.md  pr-labeling.md  slack-teaser.md  weekly-summary.md
.github/scripts/: describe-pr.js  label-issue.js  label-pr.js  sync-milestones.js  weekly-summary.js
.github/workflows/: ci.yaml  docs.yaml  issue-labeling.yml  pr-labeling.yml  pr-title-check.yml  statistical.yaml  sync-milestones.yml  weekly-summary.yml
ci/: ci.env  ci_mcmc_gcmc.yaml  ci_mcmc_nvt.yaml  dummy_host.cif
ci/statistical/: README.md  generate_expected.py  run_reference.py  validate.py  validate_npt_physics.py  validate_nve_physics.py  validate_nvt_physics.py
ci/statistical/expected/: gcmc_co2_rubtak.yaml  md_npt_lj_argon.yaml  md_nve_lj_argon.yaml  md_nvt_lj_argon.yaml  nvt_50co2_30box.yaml
ci/statistical/inputs/ci/: gcmc_co2_rubtak.yaml  md_npt_lj_argon.yaml  md_nve_lj_argon.yaml  md_nvt_lj_argon.yaml  nvt_50co2_30box.yaml
ci/statistical/inputs/host/: RUBTAK.cif  argon_fcc.cif  empty_30.cif
ci/statistical/inputs/lennard_jones/: trappe.yaml
ci/statistical/inputs/reference/: gcmc_co2_rubtak.yaml  md_nve_lj_argon.yaml  md_nvt_lj_argon.yaml  nvt_50co2_30box.yaml
docs/: .nav.yml  architecture.md  handbook.md  index.md  potentials.md  simulations.md  troubleshooting.md  units.md
docs/features/: ensembles.md  force_fields.md  index.md  mc_moves.md
docs/javascripts/: mermaid.js
docs/notebooks/: conventions.ipynb  lens.ipynb  logging.ipynb  mc_moves.ipynb  neighborlist.ipynb  patches.ipynb  potentials.ipynb  propagators.ipynb  runtime_assertions.ipynb  tables.ipynb
docs/scripts/: build.sh  gen_ref_pages.py
docs/stylesheets/: extra.css
examples/: mcmc_nvtw.yaml  mcmc_rigid.yaml  mcmc_widom.yaml  md_lj_argon_nve.yaml  md_lj_argon_nvt.yaml  md_mace.yaml  md_orb.yaml  md_uma.yaml  nvt_co2_pressure_test.yaml  relax_mace.yaml  relax_orb.yaml
examples/adsorbate/: ch4.yaml  ethene.yaml  h2o.yaml  n2.yaml
examples/host/: empty.cif
examples/lennard_jones/: trappe.yaml
examples/relax_batch_mofs/: README.md  convert_uma.sh  relax_batch_video.py  relax_uma_mofs.yaml
examples/relax_batch_mofs/host/: MOF1.cif  MOF2.cif  MOF3.cif  MOF4.cif  MOF5.cif
src/kups/: __init__.py
src/kups/application/mcmc/: __init__.py  analysis.py  data.py  logging.py  simulation.py
src/kups/application/md/: __init__.py  analysis.py  data.py  logging.py  simulation.py
src/kups/application/relaxation/: analysis.py  data.py  logging.py  simulation.py
src/kups/application/simulations/: mcmc_nvtw.py  mcmc_rigid.py  mcmc_widom.py  md_lj.py  md_mlff.py  md_nvtw.py  relax_lj.py  relax_mlff.py
src/kups/application/utils/: data.py  particles.py  path.py  propagate.py
src/kups/core/: __init__.py  assertion.py  capacity.py  constants.py  lens.py  logging.py  neighborlist.py  parameter_scheduler.py  patch.py  potential.py  propagator.py  result.py  schedule.py  storage.py  typing.py  unitcell.py
src/kups/core/data/: __init__.py  batched.py  buffered.py  index.py  table.py  wrappers.py
src/kups/core/utils/: __init__.py  block_average.py  ema.py  field_handler.py  functools.py  jax.py  math.py  msgpack.py  ops.py  position.py  quaternion.py  random.py  subselect.py  torch.py
src/kups/mcmc/: __init__.py  flat_histogram.py  fugacity.py  moves.py  probability.py  widom.py
src/kups/md/: __init__.py  integrators.py  observables.py
src/kups/observables/: __init__.py  pressure.py  radial_distribution_function.py  stress.py
src/kups/potential/: __init__.py
src/kups/potential/classical/: __init__.py  blocking.py  cosine_angle.py  coulomb.py  dihedral.py  ewald.py  harmonic.py  internal.py  inversion.py  lennard_jones.py  morse.py  uff_utils.py
src/kups/potential/common/: __init__.py  direct.py  energy.py  evaluation.py  graph.py
src/kups/potential/mliap/: __init__.py  interface.py  local.py  tojax.py
src/kups/potential/mliap/torch/: __init__.py  mace.py
src/kups/relaxation/: propagator.py
src/kups/relaxation/optax/: __init__.py  fire.py  lbfgs.py  max_step_size.py  optimizer.py
test/: clear_cache.py
test/application/: test_mcmc_analysis.py  test_mcmc_data.py  test_mcmc_rigid.py  test_md_analysis.py  test_relax_analysis.py
test/application/utils/: test_particles.py  test_path.py
test/core/: test_assertion.py  test_block_average.py  test_buffered.py  test_capacity.py  test_ema.py  test_functools.py  test_index.py  test_jax_utils.py  test_lens.py  test_logging.py  test_math.py  test_msgpack.py  test_neighborlist.py  test_ops.py  test_parameter_scheduler.py  test_position.py  test_potential.py  test_propagator.py  test_quaternion.py  test_scatter_set.py  test_schedule.py  test_storage.py  test_subselect.py  test_table.py  test_torch.py  test_tree_map.py  test_unitcell.py
test/mcmc/: __init__.py  test_flat_histogram.py  test_fugacity.py  test_log_fugacity_ratio.py  test_moves.py  test_probability.py  test_widom.py
test/md/: test_integrators.py
test/observables/: __init__.py  test_pressure.py  test_radial_distribution_function.py  test_stress.py
test/potential/: test_blocking_spheres.py  test_coulomb.py  test_energy_potential.py  test_evaluation.py  test_ewald.py  test_graph.py  test_harmonic.py  test_internal.py  test_lennard_jones.py  test_local_mliap.py  test_potential_update.py  test_tojax.py  test_torch_mace.py
test/potential/classical/: conftest.py  test_cosine_angle.py  test_dihedral.py  test_inversion.py  test_morse.py
test/relaxation/: test_propagator.py
test/relaxation/optax/: test_fire.py  test_lbfgs.py  test_max_step_size.py  test_optimizer.py
